@@ -8,7 +8,7 @@ import com.example.demo.models.Message;
 import com.example.demo.models.Utilisateur;
 import com.example.demo.repositorys.ConversationRepository;
 import com.example.demo.repositorys.MessageRepository;
-import com.example.demo.repositorys.UtilisateurRepository; // Importez le repository Utilisateur
+import com.example.demo.repositorys.UtilisateurRepository;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
@@ -17,39 +17,37 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ConversationService {
 
     private final ConversationRepository conversationRepository;
     private final MessageRepository messageRepository;
-    private final UtilisateurRepository utilisateurRepository; // Ajoutez ce champ
+    private final UtilisateurRepository utilisateurRepository;
 
     public ConversationService(ConversationRepository conversationRepository,
                                MessageRepository messageRepository,
-                               UtilisateurRepository utilisateurRepository) {
+                               UtilisateurRepository utilisateurRepository
+                               ) {
         this.conversationRepository = conversationRepository;
         this.messageRepository = messageRepository;
-        this.utilisateurRepository = utilisateurRepository; // Initialisez le repository Utilisateur
+        this.utilisateurRepository = utilisateurRepository;
     }
 
     public List<MessageResponseDTO> getMessagesByConversationId(Long conversationId) {
         List<Message> messages = messageRepository.findByConversationId(conversationId);
-        return messages.stream().map(message -> {
-            MessageResponseDTO dto = new MessageResponseDTO();
-            dto.setId(message.getId());
-            dto.setContent(message.getContent());
-            dto.setTimestamp(message.getTimestamp());
-
-            // Gestion des utilisateurs null
-            dto.setFromUserName(message.getFromUser() != null ? message.getFromUser().getUsername() : "Utilisateur inconnu");
-            dto.setToUserName(message.getToUser() != null ? message.getToUser().getUsername() : "Utilisateur inconnu");
-
-            return dto;
-        }).collect(Collectors.toList());
+        return messages.stream()
+                .map(message -> {
+                    MessageResponseDTO dto = new MessageResponseDTO();
+                    dto.setId(message.getId());
+                    dto.setContent(message.getContent());
+                    dto.setTimestamp(message.getTimestamp());
+                    dto.setFromUserName(message.getFromUser() != null ? message.getFromUser().getUsername() : "Utilisateur inconnu");
+                    dto.setToUserName(message.getToUser() != null ? message.getToUser().getUsername() : "Utilisateur inconnu");
+                    return dto;
+                })
+                .toList();
     }
-
 
     @Transactional
     public Conversation createOrGetConversation(Long vendeurId, Long acheteurId) {
@@ -71,10 +69,12 @@ public class ConversationService {
 
         return conversation;
     }
+
     @Transactional
     public Conversation createConversation(Conversation conversation) {
         return conversationRepository.save(conversation);
     }
+
     public List<ConversationResponseDTO> getConversationsByUserId(Long userId) {
         return conversationRepository.findAllByUserId(userId).stream()
                 .map(conversation -> new ConversationResponseDTO(
@@ -84,10 +84,8 @@ public class ConversationService {
                         conversation.getLastMessage() != null ? conversation.getLastMessage().getContent() : null,
                         conversation.getLastMessage() != null ? conversation.getLastMessage().getTimestamp() : null
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-
 
     public List<ConversationResponseDTO> getConversationsByUsername(String username) {
         Optional<Utilisateur> user = utilisateurRepository.findByUsername(username);
@@ -96,7 +94,6 @@ public class ConversationService {
         }
         return getConversationsByUserId(user.get().getId());
     }
-
 
     @Transactional(readOnly = true)
     public List<Conversation> getAllConversations() {
@@ -115,32 +112,26 @@ public class ConversationService {
 
     @Transactional
     public Message addMessageToConversation(Long conversationId, Message message) {
-        // Récupérer la conversation par ID
         Conversation conversation = getConversationById(conversationId);
 
         if (conversation != null) {
-            // Obtenir l'utilisateur authentifié
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
             String currentUserName = authentication.getName();
 
-            // Rechercher l'utilisateur à partir de son nom d'utilisateur
             Optional<Utilisateur> optionalCurrentUser = utilisateurRepository.findByUsername(currentUserName);
 
-            if (optionalCurrentUser.isPresent()) { // Vérifiez si l'utilisateur a été trouvé
+            if (optionalCurrentUser.isPresent()) {
                 Utilisateur currentUser = optionalCurrentUser.get();
 
-                // Associer l'utilisateur expéditeur et destinataire
                 message.setConversation(conversation);
                 message.setFromUser(currentUser);
-                message.setToUser(conversation.getAcheteur()); // Ou l'autre utilisateur selon le contexte
+                message.setToUser(conversation.getAcheteur());
 
                 return messageRepository.save(message);
             } else {
-                // Gestion de l'utilisateur non trouvé (ex. lancer une exception ou retourner une réponse appropriée)
                 throw new IllegalArgumentException("Utilisateur non trouvé");
             }
         }
-        return null; // Vous pourriez envisager de lancer une exception si la conversation est introuvable
+        return null;
     }
-
 }
